--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de juegos</title>
+    <title>Sistema de registro de juegos</title>
 </head>
 <body>
-    
 </body>
 </html>
